@@ -46,10 +46,21 @@
                 <label>112</label>
                 <shadowcolor>-</shadowcolor>
             </control>
+			<control type="label">
+				<visible>System.HasMediaDVD</visible>
+                <posx>21-col</posx>
+                <posy>-12</posy>
+                <width>4-col-gutter</width>
+                <font>smallStrong</font>
+				<align>right</align>
+                <textcolor>selected</textcolor>
+                <label>$INFO[Player.Chapter,$LOCALIZE[31141] ,/]$INFO[Player.ChapterCount]</label>
+                <shadowcolor>-</shadowcolor>
+            </control>
             <control type="label">
                 <posx>308</posx>
                 <posy>-13</posy>
-                <width>18-col</width>
+                <width>12-col</width>
                 <font>smallMedium</font>
                 <textcolor>selected</textcolor>
                 <label>[UPPERCASE]$INFO[VideoPlayer.TVShowTitle][/UPPERCASE]</label>
