@@ -26,8 +26,6 @@
 					<texture>colors/black.png</texture>
 					<colordiffuse>ccffffff</colordiffuse>
 					<aspectratio>stretch</aspectratio>
-					<!--animations-->
-					<animation effect="slide" start="0,200" end="0" delay="300" time="200" tween="sine">WindowOpen</animation>
 				</control>
 													
 			</control>
@@ -36,10 +34,7 @@
 			<control type="group">	
 				<posx>col-1-begin</posx>
 				<posy>row-15-begin</posy>
-				
-				<!--animations-->
-				<animation effect="fade" start="0" end="100" delay="900" time="300">WindowOpen</animation>
-														
+															
 				<!--content description-->
 				<control type="label">
 					<posx>0</posx>
@@ -80,10 +75,7 @@
 		
 				<posx>0</posx>
 				<posy>row-17-begin</posy>
-				
-				<!--animations-->
-				<animation effect="fade" start="0" end="100" delay="1200" time="300">WindowOpen</animation>
-						
+									
 				<control type="image">
 					<posx>-200</posx>
 					<posy>-12</posy>
@@ -162,12 +154,18 @@
 							<onclick>ActivateWindow(123)</onclick>
 						</item>
 						<item id="4">
+							<visible>System.HasMediaDVD + VideoPlayer.HasMenu</visible>
+							<label>31140</label>
+							<thumb>-</thumb>
+							<onclick>PlayerControl(ShowVideoMenu)</onclick>
+						</item>
+						<item id="5">
 							<label>24012</label>
 							<thumb>-</thumb>
 							<onclick>Close</onclick>
 							<onclick>ActivateWindow(SubtitleSearch)</onclick>
 						</item>
-						<item id="5">
+						<item id="6">
 							<label>298</label>
 							<thumb>-</thumb>
 							<onclick>ActivateWindow(125)</onclick>
