@@ -139,4 +139,6 @@
 	<string id="31137">Available Content Scrapers:</string>
 	<string id="31138">Item Info</string>
 	<string id="31139">Item Options</string>
+	<string id="31140">DVD Menu</string>
+	<string id="31141">Chapter</string>
 </strings>
