@@ -2,7 +2,9 @@
 - [MODIFIED] Video info modified to default to 'play' (thanks Vustom)
 - [MODIFIED] Default background image changed (previous default retained, available from skin settings).
 - [NEW] Record option added to videoOSD.
+- [NEW] DVD Menu added to videoOSD.
 - Bugfixes to global search and favourites
+- Various revisions and fixes
 
 
 [B]0.9.9[/B]
